Fixed several issues API
