# api/swagger/swagger.yaml
@@ -40,7 +40,6 @@ produces:
   - application/json
 paths:
   /account:
-    # binds a127 app logic to a route
     x-swagger-router-controller: account
     get:
       tags:
@@ -76,20 +75,24 @@ paths:
           - write_account
           - read_account
   /accounts:
-    # binds a127 app logic to a route
     x-swagger-router-controller: accounts
     get:
       tags:
         - accounts
-      description: Returns accounts list the caller
+      description: Returns accounts list the caller - should only be available to authorized super users.
       # used as the method name of the controller
       operationId: accounts
       parameters:
+        - name: accountId
+          in: query
+          description: The accountId assigned to your flower shop operates.
+          required: true
+          type: string
         - name: secretKey
           in: query
           description: The secret key for your assigned flower shop.
           required: true
-          type: number
+          type: string
       # responses may fall through to errors
       responses:
         "200":
@@ -279,7 +282,6 @@ paths:
           - write_account
           - read_account
   /orders:
-    # binds a127 app logic to a route
     x-swagger-router-controller: orders
     get:
       tags:
@@ -351,7 +353,6 @@ paths:
           - write_account
           - read_account
   /order:
-    # binds a127 app logic to a route
     x-swagger-router-controller: order
     get:
       tags:
@@ -377,7 +378,6 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   /order/create:
-    # binds a127 app logic to a route
     x-swagger-router-controller: orderCreate
     post:
       tags:
@@ -389,9 +389,9 @@ paths:
         - name: order
           in: body
           description: Order object that needs to be added to the marketplace
-          required: false
+          required: true
           schema:
-            $ref: "#/definitions/Order"
+            $ref: "#/definitions/OrderCreateSchema"
       responses:
         "200":
           description: Success
@@ -409,7 +409,6 @@ paths:
           - write_account
           - read_account
   /order/accept:
-    # binds a127 app logic to a route
     x-swagger-router-controller: orderAccept
     get:
       tags:
@@ -418,6 +417,16 @@ paths:
       # used as the method name of the controller
       operationId: orderAccept
       parameters:
+        - name: accountId
+          in: query
+          description: Your account ID
+          required: true
+          type: string
+        - name: secretKey
+          in: query
+          description: The secret key given to you when you registered
+          required: true
+          type: string
         - name: orderId
           in: query
           description: The orderId of the order in which details accepted
@@ -427,8 +436,7 @@ paths:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/OrderResponse"
+            $ref: "#/definitions/OrderAcceptSchema"
         # responses may fall through to errors
         default:
           description: Error
@@ -517,18 +525,103 @@ definitions:
       itemMaxCost: 
         type: number
         format: float
+  OrderAcceptSchema:
+    type: object
+    properties:
+      order:
+        type: object
+        description: Order detail
+      result: 
+        type: boolean
+        description: True if successful in accepting order, false otherwise
+      resultMessage: 
+        type: string
+        description: Details about the acceptance result
   Order:
     type: object
     properties:
-      id:
-        type: integer
-        format: int64
       originatingAccountId:
-        type: integer
-        format: int64
+        type: string
       fullfillmentAccountId:
-        type: integer
+        type: string
+      id:
+        type: string
         format: int64
+      toFirstName:
+        type: string
+      toLastName:
+        type: string
+      toAddress1:
+        type: string
+      toAddress2:
+        type: string
+      toCity:
+        type: string
+      toState:
+        type: string
+      toZipCode:
+        type: number
+      toHomePhone:
+        type: string
+      toMobilePhone:
+        type: string
+      toEmail:
+        type: string
+      fromFirstName:
+        type: string
+      fromLastName:
+        type: string
+      fromAddress1:
+        type: string
+      fromAddress2:
+        type: string
+      fromCity:
+        type: string
+      fromState:
+        type: string
+      fromZipCode:
+        type: number
+      fromHomePhone:
+        type: string
+      fromMobilePhone:
+        type: string
+      fromEmail:
+        type: string
+        description: Email address from the sender
+      orderDetails:
+        type: array
+        items:
+          $ref: '#/definitions/OrderDetails'
+      orderTotal:
+        type: number
+        format: float
+      orderTotalNotToExceed: 
+        type: number
+        format: float
+      deliveryDate:
+        type: string
+        format: date
+      timedDelivery:
+        type: boolean
+      deliveryTime:
+        type: string
+        format: date-time
+      expirationDate:
+        type: string
+        format: date
+      orderStatus:
+        type: integer
+        format: int32
+        description: Order Status
+  OrderCreateSchema:
+    type: object
+    properties:
+      accountId:
+        type: string
+      secretKey:
+        type: string
+      id:
+        type: string
       toFirstName:
         type: string
       toLastName:
